src/test/resources/testData/completion/external/order.proto
syntax = "proto3";

import "<error descr="Cannot resolve import 'google/type/'">google/type/<caret></error>";
